homelab/ai-platform/gateway-api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai-platform-litellm
spec:
  hostnames:
    - llm.derwitt.site
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: derwitt-site-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: litellm
          port: 4000
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
